--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </style>
 </head>
 <body>
-<h1>SCIMAP TDI5 for River Axe/h1>
+<h1>SCIMAP TDI5 for River Axe</h1>
 <button id="locationButton">Locate Me</button>
 <div id="map"></div>
 
