--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
         attribution: 'Sim Reaney / SCIMAP',
         name: 'Flow pathways'
     });
-    map7 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/heatmap/{z}/{x}/{y}.png', {
+    map7 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/heatmapBPs/{z}/{x}/{y}.png', {
         minZoom: 8,
         maxZoom: 18,
         tms: false,
         attribution: 'Sim Reaney / SCIMAP',
         name: 'Heatmap of Breakthrough Points'
     });
-    map8 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/heatmap/{z}/{x}/{y}.png', {
+    map8 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/heatmapDPs/{z}/{x}/{y}.png', {
         minZoom: 8,
         maxZoom: 18,
         tms: false,
