index and pages.yml

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         maxZoom: 18,
         tms: false,
         attribution: 'Sim Reaney / SCIMAP',
-        name: 'In stream TDI5 risk concentration'
+        name: 'In stream TDI5LM risk concentration'
     });
 
     map5 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/deliveryAndBreakthroughPoints/{z}/{x}/{y}.png', {
