--- a/index.html
+++ b/index.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <title>SCIMAP TDI5 for River Axe</title>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+    <title>SCIMAP TDI5 for River Axe</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-      <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-      <style type="text/css">
-          body {
-              margin: 0;
-              padding: 0;
-              font-family: Arial, Helvetica, sans-serif;
-          }
+    <style type="text/css">
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
 
-          html, body, #map {
-              width: 100%;
-              height: 95%;
-          }
-      </style>
-      <style>
-          #map {
-              width: 100%;
-              height: 100%;
-          }
+        html, body, #map {
+            width: 100%;
+            height: 95%;
+        }
+    </style>
+    <style>
+        #map {
+            width: 100%;
+            height: 100%;
+        }
 
-          .info {
-              padding: 6px 8px;
-              font: 14px/16px Arial, Helvetica, sans-serif;
-              background: white;
-              background: rgba(255, 255, 255, 0.8);
-              box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-              border-radius: 5px;
-          }
+        .info {
+            padding: 6px 8px;
+            font: 14px/16px Arial, Helvetica, sans-serif;
+            background: white;
+            background: rgba(255, 255, 255, 0.8);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+        }
 
-          .info h4 {
-              margin: 0 0 5px;
-              color: #777;
-          }
+        .info h4 {
+            margin: 0 0 5px;
+            color: #777;
+        }
 
-          .legend {
-              text-align: left;
-              line-height: 18px;
-              color: #555;
-          }
+        .legend {
+            text-align: left;
+            line-height: 18px;
+            color: #555;
+        }
 
-          .legend i {
-              width: 18px;
-              height: 18px;
-              float: left;
-              margin-right: 8px;
-              opacity: 0.7;
-          }
-      </style>
-  </head>
+        .legend i {
+            width: 18px;
+            height: 18px;
+            float: left;
+            margin-right: 8px;
+            opacity: 0.7;
+        }
+    </style>
+</head>
 <body>
 <h1>SCIMAP TDI5 for River Axe</h1>
 <button id="locationButton">Locate Me</button>
@@ -73,21 +73,105 @@
         attribution: 'Background map &copy; ESRI</a>'
     });
 
+    // ESRI Dark Grey Canvas Tile Layer
+    var esriLayerDGC = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Dark_Gray_Base/MapServer/tile/{z}/{y}/{x}', {
+        attribution: 'Background map &copy; ESRI'
+    });
+
     // Add OpenStreetMap as the default base layer
     osmLayer.addTo(map);
 
     // Define baseMaps object for layer control
     var baseMaps = {
         "OpenStreetMap": osmLayer,
-        "ESRI World Imagery": esriLayer
+        "ESRI World Imagery": esriLayer,
+        "ESRI Dark Grey Canvas": esriLayerDGC
     };
 
-    // Add layer control to switch between base maps
-    L.control.layers(baseMaps, overlayMaps).addTo(map);
+    // Return the first visible overlay name (if any)
+    function getVisibleOverlayName() {
+        if (typeof overlayMaps !== 'undefined') {
+            for (var name in overlayMaps) {
+                if (overlayMaps.hasOwnProperty(name) && map.hasLayer(overlayMaps[name])) {
+                    return name;
+                }
+            }
+        }
+        return '';
+    }
 
+    // Build legend HTML for a given layer name
+    function legendHtmlForLayer(name) {
+        if (!name) return '';
+        // Instream Risk Concentration and CSA scores use same continuous colour ramp
+        if (name === 'Instream Risk Concentration' || name === 'Critical Source Area Scores (CSAs)' || name === 'Flow and sediment surface flow pathways') {
+            var grades = [0, 0.25, 0.5, 0.75, 1.0];
+            var html = '<h4>' + name + '</h4>';
+            for (var i = 0; i < grades.length; i++) {
+            html += '<i style="background:' + getColor(grades[i]) + '"></i> ' +
+                grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+            }
+            return html;
+        }
+        // Top 10% - single swatch
+        if (name === 'CSAs - Top 10% TDI5 Sources') {
+            return '<i style="background:#ff0000"></i> Top 10% critical source areas';
+        }
+        // Breakthrough / Delivery points
+        if (name === 'Breakthrough and delivery points') {
+            return '<i style="background:#ff0000; width:12px; height:12px; border-radius:50%; display:inline-block; margin-right:8px;"></i> Breakthrough points<br>' +
+               '<i style="background:#0000ff; width:12px; height:12px; border-radius:50%; display:inline-block; margin-right:8px;"></i> Delivery points';
+        }
 
+        // Density maps
+        if (name === 'Density map of breakthrough points' || name === 'Density map of delivery points') {
+            var grades = [0, 0.25, 0.5, 0.75, 1.0];
+            var legendText =['Low Density', 'Medium Density', 'High Density', 'Very High Density', 'Highest Density'];
+            var html = '<h4>' + name + '</h4>';
+            for (var i = 0; i < grades.length; i++) {
+            html += '<i style="background:' + getColor(grades[i]) + '"></i> ' +
+                legendText[i] + (legendText[i + 1] ? '<br>' : '+');
+            }
+            return html;
+        }
+        return '';
+    }
 
+    // Update the legend DOM created later in the script (class 'info legend')
+    function updateLegendForVisibleLayer() {
+        var legendDiv = document.querySelector('.info.legend');
+        if (!legendDiv) return;
 
+        // If overlayMaps not yet defined, clear and exit
+        if (typeof overlayMaps === 'undefined') {
+            legendDiv.innerHTML = '';
+            return;
+        }
+
+        // Build combined legend for ALL visible overlay layers
+        var combinedHtml = '';
+        var anyVisible = false;
+        for (var name in overlayMaps) {
+            if (overlayMaps.hasOwnProperty(name) && map.hasLayer(overlayMaps[name])) {
+                anyVisible = true;
+                combinedHtml += legendHtmlForLayer(name) + '<hr style="margin:6px 0;">';
+            }
+        }
+
+        // If none visible, optionally show nothing or a default message. Here we leave it empty.
+        legendDiv.innerHTML = anyVisible ? combinedHtml : '';
+    }
+
+    // Update legend whenever layers change
+    map.on('overlayadd overlayremove baselayerchange', function (e) {
+        // small timeout to allow control internals to finish
+        setTimeout(updateLegendForVisibleLayer, 10);
+    });
+
+    // Ensure legend is correct after the rest of the script runs (initial state)
+    setTimeout(updateLegendForVisibleLayer, 300);
+
+    // Tile layers for overlays
     map1 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/top10pcent/{z}/{x}/{y}.png', {
         minZoom: 8,
         maxZoom: 18,
@@ -104,15 +188,16 @@
         name: 'Critical Source Area Scores (CSAs)'
     });
 
+
     map4 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/inStreamConcn/{z}/{x}/{y}.png', {
         minZoom: 8,
         maxZoom: 18,
         tms: false,
         attribution: 'Sim Reaney / SCIMAP',
-        name: 'In stream TDI5LM risk concentration'
+        name: 'In stream TDI5 risk concentration'
     });
 
-    map5 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/deliveryAndBreakthroughPoints/{z}/{x}/{y}.png', {
+    map5 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/breakthroughAndDeliveryPoints/{z}/{x}/{y}.png', {
         minZoom: 8,
         maxZoom: 18,
         tms: false,
@@ -151,9 +236,10 @@
         "Instream Risk Concentration": map4
     };
 
-    L.control.layers(null, overlayMaps).addTo(map); // Null for baseMaps
+    // Add layer control (base + overlays)
+    L.control.layers(baseMaps, overlayMaps).addTo(map);
 
-    //legend
+    //legend color function
     function getColor(d) {
         return d > 1.0 ? '#ebffff' :
             d > 0.75 ? '#eb0000' :
@@ -163,23 +249,21 @@
             '#0085bf';
     }
 
-    map.addLayer(map4);
+    // Create a single legend control whose contents will be updated to show ALL visible overlays
     var legend = L.control({position: 'bottomright'});
 
     legend.onAdd = function (map) {
-        var div = L.DomUtil.create('div', 'info legend'),
-            grades = [0, 0.25, 0.5, 0.75, 1.0],
-            labels = [];
-
-        for (var i = 0; i < grades.length; i++) {
-            div.innerHTML +=
-                '<i style="background:' + getColor(grades[i]) + '"></i> ' +
-                grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
-        }
+        var div = L.DomUtil.create('div', 'info legend');
+        div.innerHTML = ''; // will be populated by updateLegendForVisibleLayer()
         return div;
     };
     legend.addTo(map);
-    //end legend
+
+    // Optionally add a default overlay at load
+    map.addLayer(map4);
+
+    // ensure legend shows for initial visible layers
+    setTimeout(updateLegendForVisibleLayer, 300);
 
     var userLocationMarker;
 
@@ -212,5 +296,3 @@
 </script>
 </body>
 </html>
-
-
