--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
         attribution: 'Sim Reaney / SCIMAP',
         name: 'In stream TDI5 risk concentration'
     });
-
-    map5 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/breakthroughAndDeliveryPoints/{z}/{x}/{y}.png', {
+deliveryAndBreakthroughPoints
+    map5 = L.tileLayer('https://simreaney.github.io/EA-Axe-TDI5/deliveryAndBreakthroughPoints/{z}/{x}/{y}.png', {
         minZoom: 8,
         maxZoom: 18,
         tms: false,
